--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.4.1",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
